[package]
name = "learn_rust_by_test"
version = "0.1.0"
authors = ["Jeff Li <lijinfeng01@inspur.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"                       # Library for reading/writing numbers in big-endian and little-endian.
structview = "1"                      # Viewing binary data as high-level data structures, safely.

# for mandelbrot
num = "0.4"
image = "0.13.0"
rayon = "1"
